fixed scroll on mobile

--- a/app.css
+++ b/app.css
@@ -184,6 +184,7 @@ body h1, h2, h3{
     #main {
         left: 0;
         margin: 2em;
+        height: fit-content;
     }
 
     #main .canvas {
